updated csv stuff to match requirements

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -21,7 +21,8 @@
     "- Chaehui Kim (M250132)\n",
     "- Eugene Phang (EPHANG002)\n",
     "- Abhinav Kiran Korety ()\n",
-    "- Kwan Wei Yin Joel ()"
+    "- Kwan Wei Yin Joel ()\n",
+    "- Daniel Sutjipto (DANI0064)"
    ]
   },
   {
@@ -56,10 +57,14 @@
    "metadata": {},
    "source": [
     "file = original excel file\n",
+    "\n",
     "rawFileData = giant list where each item is a row converted into a single string\n",
-    "fileHeader = first row \"Tutorial Group,Student ID,School,Name,Gender,CGPA\"\n",
+    "\n",
+    "fileHeader = first row ['Tutorial Group','Student ID','School','Name','Gender','CGPA']\n",
+    "\n",
     "fileData = each row in the file turned into a list of cells as strings\n",
-    "studentData = list of dictionaries, each representing a student's data ('student ID', 'TG', 'School', 'Name', 'Gender', 'CGPA')"
+    "\n",
+    "studentData = list of dictionaries, each representing a student's data ('student ID', 'TG', 'School', 'Name', 'Gender', 'CGPA')\n"
    ]
   },
   {
@@ -859,13 +864,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "finalData = []\n",
-    "for tg in all_tgs:\n",
-    "    tgStuds = [s for s in studentData if s['TG'] == tg] #groups each tutorial group into a list\n",
-    "    finalGrps = distribute(tgStuds, n)\n",
-    "    finalData.append(finalGrps) #resulting finalData is a list of lists(tutorial groups)\n",
-    "                                #each tutorial group is a list of groups\n",
-    "                                #each group is a list of students (length of list is groupSize)"
+    "def writeLine(line): #shortened function that adds a string to csv\n",
+    "    print(line, file = processedFile) "
    ]
   },
   {
@@ -875,15 +875,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def writeLine(line): #shortened function that adds a string to csv\n",
-    "    print(line, file = processedFile) \n",
-    "processedFile = open(\"processed records.csv\", \"w\")\n",
-    "fileHeader.append(\"Group Number\") #adds a column to header line\n",
+    "processedFile = open(\"FCS4_Team2_JohnSmith.csv\", \"w\")\n",
+    "fileHeader.append(\"Team Assigned\") #adds a column to header line\n",
     "writeLine(','.join(fileHeader))   #combines file header list into a string where each column is separated by a \",\"\n",
     "\n",
-    "for tutGrp in finalData:\n",
+    "for tutGrp in finalAllTgs:\n",
     "    for grpNum, group in enumerate(tutGrp, start=1):\n",
-    "        for student in group: #for each iteration adds a student's data to csv\n",
+    "        for student in group: #on each iteration adds a student's data to csv\n",
     "            row = f\"G-{student['TG']},{student['ID']},{student['School']},{student['Name']},{'Male' if student['Gender'] else 'Female'},{student['CGPA']},{grpNum}\"\n",
     "            writeLine(row)\n",
     "processedFile.close()"
