Revert "Merge Conflicts"
This reverts commit 6f9849e31f4953bdf982a30ce7ce95866cd04541, reversing
changes made to 9dc05f7f7d6ee7208b38118b5e5c20e2fc9ed201.

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -8,21 +8,7 @@
    },
    "source": [
     "# Table of contents\n",
-    "1. [Introduction](#introduction)\n",
-    "2. [Decomposition and breakdown](#decomposition)\n",
-    "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
-    "    1. [Extracting Data from CSV](#extracting)\n",
-    "    2. [Analysis of Data Given](#analysis)\n",
-    "4. [Design of Algorithm](#design)\n",
-    "    1. [Sorting Priorities](#priorities)\n",
-    "    2. [Group Sizes](#sizes)\n",
-    "    3. [Brainstorming: Individual Modular Diversification of Factors](#modular)\n",
-    "        1. [Considering School Frequency: Diversifying School](#school)\n",
-    "        2. [Buckets & Cyclic Round-Robin: Diversifying CGPA](#cgpa)\n",
-    "        3. [Diversifying Gender](#gender)\n",
-    "5. [Sorting Algorithm](#algo)\n",
-    "6. [Converting Back & Post-Analysis](#post)\n",
-    "7. [Algorithm Evaluation: Diversity Index](#diversity)"
+    "TODO: titles with internal links to move there"
    ]
   },
   {
@@ -30,7 +16,7 @@
    "id": "7f8292ed-0900-433c-9747-8599656be677",
    "metadata": {},
    "source": [
-    "# 1) Introduction <a name=\"introduction\"></a>\n",
+    "# 1) Introduction\n",
     "Group members:\n",
     "- Chaehui Kim (M250132)\n",
     "- Eugene Phang (EPHANG002)\n",
@@ -43,7 +29,7 @@
    "id": "1ce1ec75-e2aa-4007-b69b-5bc2b7ad66bb",
    "metadata": {},
    "source": [
-    "# 2) Decomposition and breakdown <a name=\"decomposition\"></a>\n",
+    "# 2) Decomposition and breakdown\n",
     "\n",
     "blah blah"
    ]
@@ -53,7 +39,7 @@
    "id": "5789d277-6b7e-4b5a-9c25-243b8c87dc45",
    "metadata": {},
    "source": [
-    "# 3) Extraction & Analysis of Data Given (records.csv) <a name=\"analysisandextracting\"></a>"
+    "# 3) Analysis of data given (records.csv)"
    ]
   },
   {
@@ -61,7 +47,7 @@
    "id": "c4316091-7750-413b-8570-ed60f57a1f92",
    "metadata": {},
    "source": [
-    "## 3.1) Extracting Data from CSV <a name=\"extracting\"></a>"
+    "# Extracting Data from CSV"
    ]
   },
   {
@@ -118,14 +104,6 @@
     "studentData = initStudents()\n",
     "print(studentData[0])\n",
     "print(len(studentData))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "098e3faa-0d99-4d10-9919-4f826aa5a00b",
-   "metadata": {},
-   "source": [
-    "## 3.2) Analysis of Data <a name=\"analysis\"></a>"
    ]
   },
   {
@@ -362,21 +340,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ce9fa14",
-<<<<<<< HEAD
    "metadata": {},
-=======
-   "metadata": {
-    "scrolled": true
-   },
->>>>>>> ba23b6af904317842058ad6ff2adf693b5bca5f1
    "outputs": [],
    "source": [
     "all_tgs = sorted(set(s['TG'] for s in studentData))\n",
     "\n",
-<<<<<<< HEAD
     "\n",
-=======
->>>>>>> ba23b6af904317842058ad6ff2adf693b5bca5f1
     "def Graphs_for_TG(tg_number,graph_type,compare = None):\n",
     "    tg_students = []\n",
     "    for y in studentData:\n",
@@ -384,10 +353,10 @@
     "        if tg == tg_number:\n",
     "            tg_students.append(y)\n",
     "\n",
+    "    \n",
     "    T_raw_list = getdataintolist(tg_students)\n",
     "\n",
     "    T_list_tg,label_tg = data_prep(T_raw_list,compare)\n",
-<<<<<<< HEAD
     "\n",
     "    #choose which graph to produce\n",
     "    if graph_type == 'pie':\n",
@@ -407,22 +376,6 @@
     "\n",
     "print(T_list_all)\n",
     "\n"
-=======
-    "\n",
-    "    #choose which graph to produce\n",
-    "    if graph_type == 'pie':\n",
-    "      pie_chart(T_list_tg[0],label_tg[0])\n",
-    "    if graph_type == 'bar':\n",
-    "       bar_chart(T_list_tg[1],label_tg[1])\n",
-    "    if graph_type == 'box':\n",
-    "        Box_whisker(T_list_tg[2])\n",
-    "\n",
-    "    return T_list_tg, label_tg, T_raw_list\n",
-    "\n",
-    "T_list_all, label_all, Tg_raw_list = Graphs_for_TG(2,'pie', All_raw_list)\n",
-    "\n",
-    "print(T_list_all)"
->>>>>>> ba23b6af904317842058ad6ff2adf693b5bca5f1
    ]
   },
   {
@@ -430,7 +383,7 @@
    "id": "2105bc3b-93b9-4852-b156-aa442b957d3d",
    "metadata": {},
    "source": [
-    "# 4) Design of Algorithm <a name=\"design\"></a>"
+    "# 4) Design of Algorithm"
    ]
   },
   {
@@ -438,7 +391,7 @@
    "id": "cf0b0544-ed88-4f8b-9c9a-a1c434fff351",
    "metadata": {},
    "source": [
-    "## 4.1) Sorting Priorities <a name=\"priorities\"></a>\n",
+    "## 4.1) Sorting Priorities\n",
     "1. School\n",
     "2. CGPA\n",
     "3. Gender\n",
@@ -457,7 +410,7 @@
    "id": "da4d27eb-59fa-49fc-bc9e-f48a354d374c",
    "metadata": {},
    "source": [
-    "## 4.2) Group Sizes <a name=\"sizes\"></a>\n",
+    "## 4.2) Group Sizes\n",
     "Currently, we are given a simplified version of the problem in which the desired number of students per group ($n$) is $5$ and the existing dataset contains a total of $6000$ students. Since $5|6000$, we can safely make $\\frac{6000}{5}=1200$ equal groups of $5$. However, in an extension of this problem, the professor may specify $n$ that does not exactly divide the total number of students in a given dataset.\n",
     "\n",
     "In this case, we decided to handle the remainder students ($r$) by distributing them, one to each existing group, with the condition that the number of groups with $n$ students is greater than the number of groups with $n+1$ students. In other words, we distribute the students $\\text{if }r<\\frac{total}{2n}$ (Case 1), else create a separate group of size $r$ (Case 2).\n",
@@ -496,7 +449,7 @@
    "id": "c3bb9efe-afdb-4ce5-a4c9-dc5c0c7e9a6e",
    "metadata": {},
    "source": [
-    "## 4.3) Brainstorming: Individual Modular Diversification of Factors <a name=\"modular\"></a>"
+    "## 4.3) Brainstorming: Individual Modular Diversification of Factors"
    ]
   },
   {
@@ -512,7 +465,7 @@
    "id": "c94045fa-6d78-4439-b2bd-af88fcdc426a",
    "metadata": {},
    "source": [
-    "### 4.3.1) Considering School Frequency: Diversifying School <a name=\"school\"></a>\n",
+    "### 4.3.1) Considering School Frequency: Diversifying School\n",
     "To ensure that people in all schools are distributed diversely, we must distribute students in the order of the frequency of their respective schools in the population dataset. In other words, students belonging to schools with a higher number of representatives are distributed first, and those from smaller schools are assigned later.\n",
     "\n",
     "This approach is logical because schools with larger student counts have a higher likelihood of forming clusters if they are left unregulated. By prioritizing their distribution early, we prevent these large groups from dominating the later stages of assignment, where additional lower priority constraints that are unrelated to school affiliation will take effect. At that point, having students from smaller schools remaining is less risky to diversity than if a large concentration of students from the same school were left unassigned.\n",
@@ -582,7 +535,7 @@
    "id": "98f2eb76-b0c0-4a93-83aa-8e6ed94b8400",
    "metadata": {},
    "source": [
-    "### 4.3.2) Buckets & Cyclic Round-Robin: Diversifying CGPA <a name=\"cgpa\"></a>\n",
+    "### 4.3.2) Buckets & Cyclic Round-Robin: Diversifying CGPA\n",
     "To ensure that each group includes a range of CGPAs, we can implement a kind of round-robin distribution. \n",
     "\n",
     "To do this, we first sort the group of students in descending order of CGPA, and partition them into approximately homogeneous GPA \"buckets\" so that we can intuitively label them as ex. \"low-GPA\", \"mid-GPA\", \"high-GPA\", etc. \n",
@@ -658,7 +611,7 @@
    "id": "6c56528e-3adb-4d1a-92a1-86437153aa58",
    "metadata": {},
    "source": [
-    "### 4.3.3) Diversifying Gender <a name=\"gender\"></a>"
+    "### 4.3.3) Diversifying Gender"
    ]
   },
   {
@@ -736,7 +689,7 @@
    "id": "ffac2bf3-4ac9-49ae-9df1-80faa0f22410",
    "metadata": {},
    "source": [
-    "# 5) Sorting Algorithm <a name=\"algo\"></a>"
+    "# Sorting Algorithm"
    ]
   },
   {
@@ -892,7 +845,7 @@
    "id": "d72a4d7a-2a77-48dc-b97e-f13cdc6fb2bf",
    "metadata": {},
    "source": [
-    "# 6) Converting Back & Post-Analysis <a name=\"post\"></a>"
+    "# Getting it back into an excel file and things"
    ]
   },
   {
@@ -1071,11 +1024,7 @@
    "id": "d192e7ce-87e7-4ee8-8723-87dbb37385cb",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "# Algorithm Evaluation"
-=======
-    "# 7) Algorithm Evaluation: Diversity Index <a name=\"diversity\"></a>"
->>>>>>> ba23b6af904317842058ad6ff2adf693b5bca5f1
    ]
   },
   {
@@ -1606,11 +1555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.13.7"
-=======
-   "version": "3.9.12"
->>>>>>> ba23b6af904317842058ad6ff2adf693b5bca5f1
   }
  },
  "nbformat": 4,
