Fix merge errors and add inpage linkss

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -22,7 +22,15 @@
     "        3. [Diversifying Gender](#gender)\n",
     "5. [Sorting Algorithm](#algo)\n",
     "6. [Converting Back & Post-Analysis](#post)\n",
-    "7. [Algorithm Evaluation: Diversity Index](#diversity)"
+    "7. [Algorithm Evaluation: Diversity Index](#diversity)\n",
+    "    1. [Finding the diversity of a single factor of a single group](#sevenone)\n",
+    "        1. [CGPA case](#sevenoneone)\n",
+    "    2. [Calculating the factors for each group](#seventwo)\n",
+    "    3. [Calculating for every tutorial group](#seventhree)\n",
+    "    4. [Printing all the factors and finding the least diverse overall with regards to composition of tutorial group](#sevenfour)\n",
+    "        1. [Finding Theoretical best school distribution when disregarding other factors](#sevenfourone)\n",
+    "        2. [Calculating gender ratio of every TG group for comparison later](#sevenfourtwo)\n",
+    "    5. [Combining everything for the final result](#sevenfive)"
    ]
   },
   {
@@ -822,6 +830,7 @@
    "source": [
     "n = 7\n",
     "\n",
+    "finalAllTgs = []\n",
     "# Apply algorithm separately to each TG \n",
     "all_tgs = sorted(set(s['TG'] for s in studentData))\n",
     "for tg in all_tgs:\n",
@@ -849,6 +858,7 @@
     "\n",
     "    # Distribute \n",
     "    finalGrps = distribute(tgStuds, n)\n",
+    "    finalAllTgs.append(finalGrps)\n",
     "\n",
     "    # Print results per grp\n",
     "    totalInGrps = 0\n",
@@ -986,7 +996,7 @@
     "\n",
     "\n",
     "def GetgrpsGraphs(TutGNum, graph_type):\n",
-    "    no_of_Grps_in_TutG = len(finalData[TutGNum-1])\n",
+    "    no_of_Grps_in_TutG = len(finalAllTgs[TutGNum-1])\n",
     "\n",
     "    T_list_tg, label_tg, Tg_raw_list = Graphs_for_TG(TutGNum, graph_type)\n",
     "    data_to_plot = []\n",
@@ -995,7 +1005,7 @@
     "\n",
     "    for i in range(0, no_of_Grps_in_TutG):\n",
     "\n",
-    "        Tut1Grp1 = finalData[TutGNum-1][i]\n",
+    "        Tut1Grp1 = finalAllTgs[TutGNum-1][i]\n",
     "        print(f\"For Tutorial Group {TutGNum} - Group {i+1}\")\n",
     "        TutGrp_raw = getdataintolist(Tut1Grp1)\n",
     "        T_list_tg_grp,label_tg_grp = data_prep(TutGrp_raw,Tg_raw_list)\n",
@@ -1041,7 +1051,7 @@
    "id": "d192e7ce-87e7-4ee8-8723-87dbb37385cb",
    "metadata": {},
    "source": [
-    "# 7) Algorithm Evaluation: Diversity Index <a name=\"diversity\"></a>"
+    "# 7) Algorithm Evaluation: Diversity Index <a id='diversity'></a>"
    ]
   },
   {
@@ -1063,10 +1073,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af4fb1ac-e837-42eb-9e8f-757f52895466",
+   "metadata": {},
+   "source": [
+    "### Utility for better visualisation later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3914a52c-f42e-4ba5-a6af-9812e0eb2314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dictionaryList : List<dict>\n",
+    "# prints dictionary in a line with spacing between keys, accounts for the length of value\n",
+    "def PrintDictListNice(dictionaryList, spacing : int = 18):\n",
+    "    for i in dictionaryList:\n",
+    "        for k,v in i.items():\n",
+    "            contentLength = 10\n",
+    "            if type(v) is float:\n",
+    "                v = f\"{v:.3f}-\"\n",
+    "            if type(v) is int:\n",
+    "                contentLength = log10(v) + 1\n",
+    "            else:\n",
+    "                contentLength = len(str(v))\n",
+    "            # elif type(v) is bool:\n",
+    "            #     contentLength = len(str(v))\n",
+    "            print(f\"{k}: {v}{' ' * max(spacing - contentLength, 1)}\", end = '')\n",
+    "        print()\n",
+    "\n",
+    "# log10 : log10\\n\",\n",
+    "def log10(num : int):\n",
+    "    count = 0\n",
+    "    while num >= 10:\n",
+    "        num /= 10\n",
+    "        count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6621cf19-f6f4-455a-8de7-0faab6c23a4f",
    "metadata": {},
    "source": [
-    "### Finding the diversity of a single factor of a single group\n",
+    "## 7.1 Finding the diversity of a single factor of a single group<a id='sevenone'></a>\n",
     "Required data: list of students in the group, required factor of the student\n",
     "<br>\n",
     "Output: The number for diversity\n",
@@ -1168,7 +1219,7 @@
    "id": "535dea59-6582-4a07-8968-2636101a2978",
    "metadata": {},
    "source": [
-    "## CGPA case\n",
+    "### 7.1.1 CGPA case <a id='sevenoneone'></a>\n",
     "But this does not work for CGPA, for that we want to find the mean, range, and midrange instead\n",
     "If we use only mean, a majority of high CGPA with a very low CGPA will result in a medium CGPA, this can be solved by looking at midrange, where a high difference between midrange and mean will show that this is happening\n",
     "However, even with these two, a group will all medium CGPAs will also result in medium mean, and low midrange difference, therefore we add range to determine that this is happening if the range is small.\n",
@@ -1229,7 +1280,7 @@
    "id": "dfa32932-d97a-4eb3-ad07-1e02c9d3092c",
    "metadata": {},
    "source": [
-    "## Calculating for CGPA"
+    "### Calculating for CGPA"
    ]
   },
   {
@@ -1337,7 +1388,7 @@
    "id": "16225eae-6d74-4f94-b072-0f2063ba8f3d",
    "metadata": {},
    "source": [
-    "## Calculating the factors for each group\n",
+    "## 7.2 Calculating the factors for each group <a id='seventwo'></a>\n",
     "Combine all the previous functions together to obtain the data for the least diverse of each factor and which group(s) they belong to"
    ]
   },
@@ -1354,7 +1405,7 @@
     "# Return:\n",
     "#  leastDiverse: dictionary of {factor1: occurencesPercent, factor2: occurencesPercent ... } as string:int\n",
     "#  grpIdx: dictionary of the grps that have the least diversity for the factor {factor1: groups}\n",
-    "def FindLeastDiverseInTutorialGroup(factors, *groupsDatas) -> (dict, list):\n",
+    "def FindLeastDiverseInTutorialGroup(factors, *groupsDatas) -> (dict, dict):\n",
     "    if len(groupsDatas) == 1 and type(groupsDatas[0]) is list:\n",
     "        groupsDatas = groupsDatas[0]\n",
     "\n",
@@ -1367,7 +1418,9 @@
     "    leastDiverse = {}\n",
     "    for factor in factors:\n",
     "        # Set default value to replace\n",
-    "        leastDiverseOccurence : float = (\"factorResult\", 0) # % of highest occurence, i.e. 90% of students are from ccds\n",
+    "        leastDiverseOccurence = ([\"factorResult\"], 0) # % of highest occurence, i.e. 90% of students are from ccds\n",
+    "        if factor == \"CGPA\":\n",
+    "            leastDiverseOccurence = ([\"CGPA score\"], 100)\n",
     "        currentGrpIdx = 0\n",
     "        for group in groupsDatas:\n",
     "            # Special CGPA case\n",
@@ -1379,13 +1432,18 @@
     "                occurence = FindMaxInDict(FindOccurencesInGroup(factor, group)) # result is ([least diverse factors(i.e. CCDS, False)], occurence count)\n",
     "                currentPercent = occurence[1] / len(group)\n",
     "            # Less diverse so replace\n",
-    "            if currentPercent > leastDiverseOccurence[1]\\\n",
+    "            if (factor != \"CGPA\" and currentPercent > leastDiverseOccurence[1])\\\n",
     "            or (factor == \"CGPA\" and currentPercent < leastDiverseOccurence[1]): # Special CGPA case where currentPercent is CGPA diversity score, so want the lowest\n",
-    "                leastDiverseOccurence = (occurence[0], currentPercent)\n",
+    "                leastDiverseOccurence = ([occurence[0]], currentPercent)\n",
     "                grpIdx[factor] = [currentGrpIdx]\n",
     "            # Same diversity so append\n",
     "            elif currentPercent == leastDiverseOccurence[1]:\n",
-    "                leastDiverseOccurence = (list(leastDiverseOccurence[0] + occurence[0]), currentPercent)\n",
+    "                 # because list in tuples cannot append\\n\",\n",
+    "                leastDiverseOccurence0 = []\n",
+    "                leastDiverseOccurence0 = (leastDiverseOccurence[0])\n",
+    "                leastDiverseOccurence0.append(occurence[0])\n",
+    "                \n",
+    "                leastDiverseOccurence = (leastDiverseOccurence0, currentPercent)\n",
     "                grpIdx[factor].append(currentGrpIdx)\n",
     "            currentGrpIdx += 1\n",
     "        leastDiverse[factor] = leastDiverseOccurence\n",
@@ -1397,7 +1455,7 @@
    "id": "d1b21601-f086-4ec7-b105-30b5164fbee6",
    "metadata": {},
    "source": [
-    "## Put it into a function that prints out all the data"
+    "### Put it into a function that prints out all the data"
    ]
   },
   {
@@ -1414,20 +1472,41 @@
     "# Return: (same as function FindLeastDiverseInTutorialGroup)\n",
     "#  leastDiverse: dictionary of {factor1: occurencesPercent, factor2: occurencesPercent ... } as string:int\n",
     "#  grpIdx: dictionary of the grps that have the least diversity for the factor {factor1: groups}\n",
-    "def PrintResultForTutorialGroup(groupData):\n",
+    "def PrintResultForTutorialGroup(groupData) -> (dict, dict):\n",
     "    allCGPA = TutGrpExtractCGPA(groupData)\n",
     "    tutMedianCGPA = Median(allCGPA)\n",
     "    tutRangeCGPA = Range(allCGPA)\n",
     "    for i in range(len(groupData)):\n",
-    "        print(f\"test group: {i}\")\n",
+    "        print(f\"group: {i}\")\n",
     "        PrintDictListNice(groupData[i])\n",
     "        print()\n",
     "        result = CalculateCGPADiversity(medianCGPA, rangeCGPA, groupData[i])\n",
     "        print(\"CGPA Score: \", result[0], end=\"\\n\\n\")\n",
     "    # print(groupData)\n",
     "    # print(FindLeastDiverseInTutorialGroup([\"School\", \"Gender\", \"CGPA\"], groupData))\n",
-    "    return PrintDictListNice(FindLeastDiverseInTutorialGroup([\"School\", \"Gender\", \"CGPA\"], groupData))\n",
-    "PrintResultForTutorialGroup(finalGrps)"
+    "    # return PrintDictListNice(FindLeastDiverseInTutorialGroup([\"School\", \"Gender\", \"CGPA\"], groupData))  \n",
+    "    data = FindLeastDiverseInTutorialGroup([\"School\", \"Gender\", \"CGPA\"], groupData)\n",
+    "    PrintFactorNice(data)\n",
+    "    return data\n",
+    "\n",
+    "# data : the return of FindLeasstDiverseInTutorialGroup\\n\",\n",
+    "def PrintFactorNice(data : (dict, dict)):\n",
+    "    for factor in data[0].keys():\n",
+    "        percentOrScore = f\"{data[0][factor][1]:.2f}\" if factor == \"CGPA\" else f\"{data[0][factor][1] * 100 :.2f}%\"\n",
+    "        print(FormatFactors(f\"Most common {factor}(s): {data[0][factor][0]} at {percentOrScore} found in group(s): {data[1][factor]}\"))\n",
+    "\n",
+    "def FormatFactors(string : str):\n",
+    "    output = string.replace(\"Most common CGPA\", \"Lowest CGPA diversity score\")\\\n",
+    "                    .replace(\"[['CGPA score']] at \", \"\")\\\n",
+    "                    .replace(\"],\", \" |\")\\\n",
+    "                    .replace(\"True\", \"Male\")\\\n",
+    "                    .replace(\"False\", \"Female\")\\\n",
+    "                    .replace(\"[\", \"\")\\\n",
+    "                    .replace(\"]\", \"\")\n",
+    "    return output\n",
+    "\n",
+    "# Test\n",
+    "PrintResultForTutorialGroup(finalAllTgs[0])"
    ]
   },
   {
@@ -1435,7 +1514,7 @@
    "id": "1e42e1b5-64a7-4f30-9695-11b8c7751e0a",
    "metadata": {},
    "source": [
-    "## Calculating for every tutorial group\n",
+    "## 7.3 Calculating for every tutorial group <a id='seventhree'></a>\n",
     "Calculate and print out the results for every group in every tutorial group\n",
     "Also collects the lowest diversity results of every tutorial group for later use"
    ]
@@ -1477,6 +1556,7 @@
     "    tgLD = {} # least diverse in TG, {factor: percentage}\n",
     "    tgLDIdx = -1\n",
     "    data = PrintResultForTutorialGroup(currentTGData)\n",
+    "    print(data)\n",
     "    print(end=\"\\n\\n\")\n",
     "\n",
     "    # Add data to global variables\n",
@@ -1491,7 +1571,8 @@
    "id": "b87a5fd6-c9d0-49c7-9851-36483167b87f",
    "metadata": {},
    "source": [
-    "## Print all the factors and find the least diverse overall with regards to composition of tutorial group"
+    "## 7.4 Printing all the factors and finding the least diverse overall with regards to composition of tutorial group <a id='sevenfour'></a>\n",
+    "Requires getting the statistics of the overall tutorial group to compare with the group"
    ]
   },
   {
@@ -1510,8 +1591,7 @@
    "id": "f05a1390-24f4-477c-b40b-befbedb5bc5a",
    "metadata": {},
    "source": [
-    "## Finding Theoretical best school distribution when disregarding everything \n",
-    "Will be useful later on for judging diversity of groups compared to innate diversity of the tutorial group"
+    "### 7.4.1 Finding Theoretical best school distribution when disregarding other factors <a id='sevenfourone'></a>"
    ]
   },
   {
@@ -1588,7 +1668,7 @@
    "id": "17996874-1285-4462-bf99-bfda0e15465e",
    "metadata": {},
    "source": [
-    "## Calculate gender ratio of every TG group for comparison later"
+    "### 7.4.2 Calculating gender ratio of every TG group for comparison later <a id='sevenfourtwo'></a>"
    ]
   },
   {
@@ -1604,6 +1684,14 @@
     "    totalMale = sum(1 for s in tgStuds if s['Gender'])\n",
     "    allGenderRatio.append(totalMale/len(tgStuds))\n",
     "print(allGenderRatio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf2317bb-8cab-4a61-96b8-1241b990fed4",
+   "metadata": {},
+   "source": [
+    "## 7.5 Combining everything to print the least diverse of every tutorial group and additionally least diverse overall with respect to difference from tutorial group <a id='sevenfive'></a>"
    ]
   },
   {
@@ -1672,12 +1760,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4cc1b48-a68b-47aa-837c-e3d8c4efa3ef",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tgs = [72, 75, 85]\n",
+    "for i in tgs:\n",
+    "    tg = i-1\n",
+    "    print(f\"Tutorial group: {tg+1}:\")\n",
+    "    PrintResultForTutorialGroup(finalAllTgs[tg])\n",
+    "    # PrintFactorNice((allTG_LD[tg], allTG_LD_Idx[tg]))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cee8e38f-b6e2-45a3-92fb-d29408121741",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allTG_LD[LD_Gender[1][0]-1][\"Gender\"][0][0][0]\n",
-    "# current_GenderD[1]\n",
+    "#allTG_LD[LD_Gender[1][0]-1][\"Gender\"][0][0][0]\n",
+    "current_GenderD[1]\n",
     "# LD_School[1]\n",
     "# TBestSchLD[LD_School[1][0]]*100\n",
     "# LD_School[1][0]*100"
@@ -1753,7 +1859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
